# mimic-rs

./: .gitignore  Cargo.toml  README.md
crates/mimic-browser/: Cargo.toml  build-and-run.sh
crates/mimic-browser/scripts/: zip-data.sh
crates/mimic-browser/src/: lib.rs  tests.rs  yara_lite.rs
crates/mimic-browser/www/: i18n.js  index.html  inspect.html
crates/mimic-cli/: Cargo.toml
crates/mimic-cli/src/: main.rs
crates/mimic-core/: Cargo.toml
crates/mimic-core/src/: config.rs  error.rs  lib.rs  tests.rs  threat.rs  verdict.rs
crates/mimic-db/: Cargo.toml
crates/mimic-db/src/: database.rs  lib.rs  models.rs  tests.rs
crates/mimic-detect/: Cargo.toml
crates/mimic-detect/src/: lib.rs  result.rs  tests.rs  wasm.rs
crates/mimic-detect/src/dng/: analyzer.rs  jpeg_lossless.rs  mod.rs  tiff.rs
crates/mimic-detect/src/pdf/: analyzer.rs  mod.rs
crates/mimic-detect/src/rar/: analyzer.rs  mod.rs  parser.rs
crates/mimic-detect/src/rtf/: analyzer.rs  mod.rs  ole.rs  parser.rs
crates/mimic-detect/src/ttf/: analyzer.rs  bytecode.rs  mod.rs  parser.rs
crates/mimic-detect/src/zip/: analyzer.rs  mod.rs
crates/mimic-engine/: Cargo.toml
crates/mimic-engine/src/: engine.rs  lib.rs  scanner.rs  tests.rs  yara.rs
crates/mimic-mcp/: Cargo.toml
crates/mimic-mcp/src/: lib.rs  main.rs  server.rs
crates/mimic-sandbox/: Cargo.toml
crates/mimic-sandbox/src/: hardening.rs  lib.rs  policy.rs  pool.rs  tests.rs  worker.rs
crates/mimic-signatures/: Cargo.toml
crates/mimic-signatures/src/: body_db.rs  cdb_db.rs  cvd.rs  hash_db.rs  ldb_db.rs  lib.rs  loader.rs  matcher.rs  matcher_tests.rs
crates/mimic-view/: Cargo.toml
crates/mimic-view/src/: archive.rs  dng.rs  elf.rs  lib.rs  pdf.rs  pe.rs  rtf.rs  tests.rs
crates/mimic-vt/: Cargo.toml
crates/mimic-vt/src/: client.rs  lib.rs  tests.rs
crates/mimic-wasm/: Cargo.toml
crates/mimic-wasm/src/: abi.rs  lib.rs  loader.rs  tests.rs
crates/mimic-web/: Cargo.toml
crates/mimic-web/src/: api.rs  lib.rs  state.rs  tests.rs
crates/mimic-web/static/: index.html
