[package]
name = "mimic-db"
description = "SQLite persistence for Mimic scan results, analysis history, and statistics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mimic-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
