[package]
name = "mimic-engine"
description = "Scanning engine: orchestrates signature matching, YARA rules, and WASM plugins (mimic-detect as plugin)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mimic-core = { workspace = true }
mimic-detect = { workspace = true }
mimic-signatures = { workspace = true }
mimic-sandbox = { workspace = true }
mimic-wasm = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
yara-x = { workspace = true }
