[package]
name = "mimic-sandbox"
description = "Sandboxed subprocess scanning with privilege reduction and security hardening"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mimic-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["user", "process", "fs", "resource"] }
seccompiler = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["user", "process", "fs", "resource"] }
