[package]
name = "mimic-vt"
description = "VirusTotal hash lookup integration for Mimic"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mimic_vt"
# cdylib so that --target wasm32-unknown-unknown produces a loadable .wasm plugin (stub)
crate-type = ["cdylib", "rlib"]

[features]
default = ["client"]
# "client" = full VT API client (not available on wasm32). Omit for WASM build.
client = ["dep:reqwest", "dep:tokio", "dep:chrono"]

[dependencies]
mimic-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
chrono = { workspace = true, optional = true }
