[package]
name = "mimic-web"
description = "Web UI and REST API for Mimic scan results and file submission"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mimic-core = { workspace = true }
mimic-engine = { workspace = true }
mimic-db = { workspace = true }
mimic-vt = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tower-http = { workspace = true }
base64 = "0.22"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
